# T4D

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Logbook.norg  README.md  compiler.sh  main.cpp  out.txt
DataVisualization/: Parameters.py  Render.py  dataVis.py
ProjectDesign/: Future_Class_diagram.txt
Statistical analisys/: Detector_test.py  Difference.py
StatisticalAnalisys/: Difference.py
StatisticalAnalysis/: Detector_test.py  Difference.py
TrackVisualization/: DetectorTesting.py  Render.py  TimeRenderer.py  TrackVis.py
data/: GeneratedData.root  Particle 0.csv  Particle 1.csv  Particle 2.csv  Particle 3.csv  Particle 4.csv  prova.root
include/: DataFile.hpp  DataGenerator.hpp  Detector.hpp  MeasuresAndStates.hpp  Momentum.hpp  Particle.hpp  ParticleGun.hpp  PhisicalParameters.hpp  PhysicalParameters.hpp  Position.hpp  RandomGenerator.hpp  ResultFile.hpp  SetupFactory.hpp  Simulation.hpp  Tracker.hpp  Utils.hpp  tPosition.hpp
project_design/: Class_diagram.txt  Class_diagram.uxf
src/: DataFile.cpp  DataGenerator.cpp  Detector.cpp  Particle.cpp  ParticleGun.cpp  Position.cpp  RandomGenerator.cpp  ResultFile.cpp  SetupFactory.cpp  Simulation.cpp  Simultaion.cpp  Tracker.cpp  Utils.cpp  tPosition.cpp
